# CivicEye

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.tt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
.streamlit/: config.toml  google_maps_api_key.txt
docs/: index.md
search/: search_index.json
src/civiceye/: __init__.py
src/civiceye/clip/: __init__.py  similarity.py
src/civiceye/openmaps/: __init__.py  maps.py  models.py  overpass.py
src/civiceye/streamlit_app/: __init__.py  app.py
